--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,6 +1,5 @@
 <section>
   <h1>About Me</h1>
-  <p>I'm a developer living in London.</p>
-  <p>I started <a href="http://chaffin.ch/" target="_blank">Chaffinch</a> in 2006.</p>
+  <p>I'm a developer living and working in London. I founded <a href="http://chaffin.ch/" target="_blank">Chaffinch</a> in 2006.</p>
   <p>Get in touch: <a href="mailto:benedict@hartley.io">benedict@hartley.io</a>
 </section>
