rolled back to functional version of Octopress (pygments bug)

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,5 +1,5 @@
 <section>
   <h1>About Me</h1>
-  <p>I'm a developer living and working in London. I founded <a href="http://chaffin.ch/" target="_blank">Chaffinch</a> in 2006.</p>
-  <p>Get in touch: <a href="mailto:ben@hartley.io">ben@hartley.io</a>
+  <p>I'm a developer at <a href="http://chaffin.ch">Chaffinch</a> in London<br/>
+  Get in touch: <a href="mailto:&#098;&#101;&#110;&#064;&#104;&#097;&#114;&#116;&#108;&#101;&#121;&#046;&#105;&#111;">&#098;&#101;&#110;&#064;&#104;&#097;&#114;&#116;&#108;&#101;&#121;&#046;&#105;&#111;</a>
 </section>
