--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,5 +1,4 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
 
-body > header h1 a, body > header h1 a:visited, body > header h1 a:hover {color:#A08DB3;}
-body > header h2 {color:#678076;}
+header[role='banner'] h1 a {color:#A08DB3 !important;}
